# openscad-step-reader

./: .clang-format  .gitignore  CMakeLists.txt  FindOCC.cmake  Makefile  README.md
src/: explore-shape.cpp  explore-shape.h  openscad-step-reader.cpp  openscad-triangle-writer.cpp  openscad-triangle-writer.h  tessellation.cpp  tessellation.h  triangle.h
